# edigeo-processing

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
qgis_edigeo_processing/: __init__.py  main.py  metadata.txt  utils.py
qgis_edigeo_processing/provider/: __init__.py  export.py  inspect.py  json2html.py
requirements/: dev.txt  lint.txt  packaging.txt  tests.txt
tests/: conftest.py  pytest.ini  test_all.py
tests/data/: .gitignore
tests/data/75103000AO01/: E000AO01.THF  EDAO01S1.VEC  EDAO01SE.DIC  EDAO01SE.GEN  EDAO01SE.GEO  EDAO01SE.QAL  EDAO01SE.SCD  EDAO01T1.VEC  EDAO01T2.VEC  EDAO01T3.VEC
